[package]
name = "koit"
version = "0.2.0"
edition = "2018"
authors = ["Thomas Churchman <thomas@kepow.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tomcur/koit"
description = "A simple, asynchronous, pure-Rust, structured, embedded database"
categories = ["asynchronous", "database-implementations"]
keywords = ["database", "embedded", "structured", "async", "non-blocking"]

[package.metadata.docs.rs]
# To run locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["file-backend", "json-format", "bincode-format"]
file-backend = ["tokio/fs", "tokio/io-util"]
json-format = ["serde", "serde_json"]
bincode-format = ["serde", "bincode"]


[dependencies]
tracing = "0.1"
tokio = { version = "1.0", features = ["sync"] }
async-trait = "0.1"
thiserror = "1.0"

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.0", optional = true }

[dev-dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
